--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -3907,6 +3907,8 @@ extensions.info.license={0,choice,0#Unknown license|1#License|1<Licenses}
 extensions.info.features={0,choice,0#No features|1#Feature|1<Features}
 extensions.info.repository=Repository
 extensions.info.website=Website
+extensions.info.scm=Sources
+extensions.info.issueManagement=Issues tracker
 extensions.info.globalNamespace=global namespace
 extensions.info.namespaces.global=Installed globally
 extensions.info.namespaces.list=Installed on the following namespaces
