XWIKI-11293: Display scm and issue management in Extension description if available * simpler translation

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -3908,7 +3908,7 @@ extensions.info.features={0,choice,0#No features|1#Feature|1<Features}
 extensions.info.repository=Repository
 extensions.info.website=Website
 extensions.info.scm=Sources
-extensions.info.issueManagement=Issues tracker
+extensions.info.issueManagement=Issues
 extensions.info.globalNamespace=global namespace
 extensions.info.namespaces.global=Installed globally
 extensions.info.namespaces.list=Installed on the following namespaces
