XWIKI-11176: Use jsTree to rewrite and improve the trees we currently have in XWiki * Start working on the document index tree * Fix dependency version in tree macro pom * Add support for adding a link in the tree menu easily. * Add dependency to tree macro in index-ui pom

--- a/xwiki-platform-core/xwiki-platform-index/xwiki-platform-index-ui/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-index/xwiki-platform-index-ui/pom.xml
@@ -45,6 +45,13 @@
       <type>xar</type>
       <scope>runtime</scope>
     </dependency>
+    <dependency>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-tree-macro</artifactId>
+      <version>${project.version}</version>
+      <type>xar</type>
+      <scope>runtime</scope>
+    </dependency>
     <!-- The Velocity Macro is used in this application's wiki pages -->
     <dependency>
       <groupId>org.xwiki.platform</groupId>
