XWIKI-10993: Integrate all themes from bootswatch in XWiki.

--- a/xwiki-platform-core/xwiki-platform-flamingo/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-flamingo/pom.xml
@@ -34,6 +34,7 @@
   <modules>
     <module>xwiki-platform-flamingo-skin</module>
     <module>xwiki-platform-flamingo-theme</module>
+    <module>xwiki-platform-flamingo-bootswatchthemes</module>
   </modules>
   <profiles>
     <profile>
