XE-1389: Welcome block is too hard to edit - The welcome gadget now needs to display the Main.Welcome document in order for the sheet to be applied - Added translation key

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -3287,6 +3287,8 @@ xe.templateprovider.backtoadmin=Go back to the Wiki Administration
 xe.templateprovider.action=Action on create
 xe.templateprovider.action.info=The action to execute when the create button is pushed, you can configure here whether the new document is saved before it is opened for edition or not.
 
+xe.welcome.edit=Edit welcome message
+
 XWiki.TemplateProviderClass_type_page=Page
 XWiki.TemplateProviderClass_type_space=Space homepage
 XWiki.TemplateProviderClass_action_edit=Edit
