--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-theme/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-theme/pom.xml
@@ -48,11 +48,13 @@
       <groupId>org.webjars</groupId>
       <artifactId>less</artifactId>
       <version>1.7.0</version>
+      <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>org.webjars</groupId>
       <artifactId>colpick</artifactId>
       <version>2.0.2</version>
+      <scope>runtime</scope>
     </dependency>
   </dependencies>
 </project>
