--- a/xwiki-platform-core/xwiki-platform-icon/xwiki-platform-icon-fontawesome/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-icon/xwiki-platform-icon-fontawesome/pom.xml
@@ -60,6 +60,7 @@
       <groupId>org.webjars</groupId>
       <artifactId>font-awesome</artifactId>
       <version>4.2.0</version>
+      <scope>runtime</scope>
     </dependency>
   </dependencies>
 </project>
