--- a/xwiki-platform-core/xwiki-platform-icon/xwiki-platform-icon-ui/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-icon/xwiki-platform-icon-ui/pom.xml
@@ -42,5 +42,12 @@
       <artifactId>xwiki-platform-icon-script</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <!-- We need a default implementation at runtime, include it here so that any other module that depends on this
+         XAR will be sure to have all that's required to make it work at runtime. -->
+    <dependency>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-icon-default</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 </project>
