XWIKI-11356: Add translation keys for the sort-parameter of the spaceindex macro

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -1803,6 +1803,8 @@ rendering.macro.spaceindex.parameter.count.name=count
 rendering.macro.spaceindex.parameter.count.description=The maximum number of documents to display. By default, up to 100 documents will be listed. If all documents should be displayed, pass 0.
 rendering.macro.spaceindex.parameter.space.name=space
 rendering.macro.spaceindex.parameter.space.description=The space to display the list of documents for. If missing, the current space will be used.
+rendering.macro.spaceindex.parameter.sort.name=sort
+rendering.macro.spaceindex.parameter.sort.description=Optional parameter to choose the sorting of the list of documents.\nValid values are: 'creationDate': sort by creation date (default), 'modificationDate': sort by update date, or 'docName': sort alphabetically.
 rendering.macro.documents.name=Documents
 rendering.macro.documents.description=Displays a list of documents in a Livetable
 rendering.macro.documents.parameter.count.name=count
