XWIKI-11369: Jump to Page throws javascript exceptions if the target is not a full wiki page name, i.e. Space.Page
(cherry picked from commit 69968f91dfd52a85dc97e7e06543dfe619cb0269)

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -1076,6 +1076,7 @@ core.viewers.jump.dialog.actions.view.shortcuts='Enter', 'Meta+V'
 core.viewers.jump.dialog.actions.edit=Edit
 core.viewers.jump.dialog.actions.edit.tooltip=Edit document in the default editor (Meta+E)
 core.viewers.jump.dialog.actions.edit.shortcuts='Meta+E'
+core.viewers.jump.dialog.invalidNameError=Invalid page name. Valid names have the following format: Space.Page
 core.viewers.jump.suggest.noResults=No documents found
 
 core.viewers.share.title=Share <a href="{1}">{0}</a> by email
