XWIKI-11371: Detect the webjar version instead of hard-coding it

--- a/xwiki-platform-core/xwiki-platform-webjars/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-webjars/pom.xml
@@ -47,6 +47,12 @@
       <version>${commons.version}</version>
     </dependency>
     <dependency>
+      <!-- Used to determine the WebJar version when it is not specified. -->
+      <groupId>org.xwiki.commons</groupId>
+      <artifactId>xwiki-commons-extension-api</artifactId>
+      <version>${commons.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.xwiki.platform</groupId>
       <artifactId>xwiki-platform-resource-default</artifactId>
       <version>${project.version}</version>
