XWIKI-11176: Use jsTree to rewrite and improve the trees we currently have in XWiki * use the WebJar output folder as source for minification in order to support resources generated dynamically * upgrade jstree to 3.0.8 * copy the LESS files from the jstree sources to be able to customize the tree style more easily (e.g. use the color themes) and to be able to create an 'xwiki' theme for jstree

--- a/xwiki-platform-core/pom.xml
+++ b/xwiki-platform-core/pom.xml
@@ -322,6 +322,10 @@
                 <goal>compress</goal>
               </goals>
               <configuration>
+                <sourceDirectory>${webjar.contentDirectory}</sourceDirectory>
+                <excludes>
+                  <exclude>**/*.min.*</exclude>
+                </excludes>
                 <outputDirectory>${webjar.contentDirectory}</outputDirectory>
                 <!-- Don't overwrite the original version. -->
                 <nosuffix>false</nosuffix>
