XWIKI-11176: Use jsTree to rewrite and improve the trees we currently have in XWiki * Use the -webjar suffix for all WebJar modules in order to be consistent.

--- a/xwiki-platform-core/xwiki-platform-job/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-job/pom.xml
@@ -32,6 +32,6 @@
   <packaging>pom</packaging>
   <description>XWiki Platform - Job - Parent POM</description>
   <modules>
-    <module>xwiki-platform-job-web</module>
+    <module>xwiki-platform-job-webjar</module>
   </modules>
 </project>
