--- a/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-test/xwiki-platform-flamingo-test-tests/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-flamingo/xwiki-platform-flamingo-test/xwiki-platform-flamingo-test-tests/pom.xml
@@ -56,6 +56,11 @@
       <version>${project.version}</version>
       <type>xar</type>
     </dependency>
+    <dependency>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-icon-default</artifactId>
+      <version>${project.version}</version>
+    </dependency>
     <!-- Test dependencies -->
     <dependency>
       <groupId>org.xwiki.platform</groupId>
