--- a/xwiki-platform-core/pom.xml
+++ b/xwiki-platform-core/pom.xml
@@ -419,6 +419,7 @@
             <exclude>**/LessCompilerScriptService*</exclude>
             <!-- Added new methods to the unstable Icon Module -->
             <exclude>**/IconManager*</exclude>
+            <exclude>**/IconSetCache*</exclude>
             <exclude>**/IconSetManager*</exclude>
           </excludes>
         </configuration>
