--- a/xwiki-platform-core/xwiki-platform-query/xwiki-platform-query-manager/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-query/xwiki-platform-query-manager/pom.xml
@@ -32,6 +32,10 @@
   <packaging>jar</packaging>
   <properties>
     <xwiki.jacoco.instructionRatio>0.58</xwiki.jacoco.instructionRatio>
+    <properties>
+      <!-- Name to display by the Extension Manager -->
+      <xwiki.extension.name>Query API</xwiki.extension.name>
+    </properties>
   </properties>
   <dependencies>
     <dependency>
