--- a/xwiki-platform-core/xwiki-platform-index/xwiki-platform-index-test/xwiki-platform-index-test-pageobjects/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-index/xwiki-platform-index-test/xwiki-platform-index-test-pageobjects/pom.xml
@@ -37,5 +37,17 @@
       <artifactId>xwiki-platform-test</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <!-- We need to extend the generic tree page objects. -->
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-tree-test-pageobjects</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <!-- Used to serialize entity references in order to compute tree node identifiers. -->
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-model</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 </project>
