--- a/xwiki-platform-core/xwiki-platform-webjars/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-webjars/pom.xml
@@ -28,9 +28,9 @@
     <version>6.4-SNAPSHOT</version>
   </parent>
   <artifactId>xwiki-platform-webjars</artifactId>
-  <name>XWiki Platform - Webjars Support</name>
+  <name>XWiki Platform - WebJars Support</name>
   <packaging>jar</packaging>
-  <description>Adds support for packaging JS files using WebJars</description>
+  <description>Adds support for packaging web resources (JavaScript, CSS, images, fonts, etc.) using WebJars</description>
   <properties>
     <xwiki.jacoco.instructionRatio>0.85</xwiki.jacoco.instructionRatio>
     <!-- Name to display by the Extension Manager -->
