[misc] Improve description.

--- a/xwiki-platform-core/xwiki-platform-tree/xwiki-platform-tree-macro/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-tree/xwiki-platform-tree-macro/pom.xml
@@ -30,7 +30,7 @@
   <artifactId>xwiki-platform-tree-macro</artifactId>
   <name>XWiki Platform - Tree - Macro</name>
   <packaging>xar</packaging>
-  <description>Tree Macro</description>
+  <description>Provides a tree view for the structured data stored in the wiki.</description>
   <properties>
     <!-- Name to display by the Extension Manager -->
     <xwiki.extension.name>Tree Macro</xwiki.extension.name>
