[Misc] Add dependencies to the Icon Module in the FAQ.

--- a/xwiki-platform-core/xwiki-platform-faq/xwiki-platform-faq-ui/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-faq/xwiki-platform-faq-ui/pom.xml
@@ -95,5 +95,12 @@
       <scope>runtime</scope>
       <optional>true</optional>
     </dependency>
+    <!-- Required to display icons -->
+    <dependency>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-icon-script</artifactId>
+      <version>${project.version}</version>
+      <scope>runtime</scope>
+    </dependency>
   </dependencies>
 </project>
