[Misc] Fix dependencies.

--- a/xwiki-platform-core/xwiki-platform-panels/xwiki-platform-panels-ui/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-panels/xwiki-platform-panels-ui/pom.xml
@@ -79,6 +79,13 @@
       <version>0.2.3-2</version>
       <scope>runtime</scope>
     </dependency>
+    <!-- Needed to display icons -->
+    <dependency>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-icon-script</artifactId>
+      <version>${project.version}</version>
+      <scope>runtime</scope>
+    </dependency>
     <!-- Panels currently don't fully have their own Administration page. For example defining the left and right
          panels or whether left/right panels are displayed or not are currently defined in the Administration
          Application. In the future move those features in this Panel Application and remove this dependency. -->
