XWIKI-11414: Allow overwrite macro.vm template in wiki based skins

--- a/xwiki-platform-core/xwiki-platform-oldcore/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-oldcore/pom.xml
@@ -729,6 +729,8 @@
               **/internal/model/reference/CurrentStringEntityReferenceResolver.java,
               **/internal/observation/remote/converter/AbstractXWikiEventConverter.java,
               **/internal/observation/remote/converter/ActionExecutionEventConverter.java,
+              **/internal/template/Template.java,
+              **/internal/template/TemplateContent.java,
               **/internal/template/TemplateScriptService.java,
               **/internal/template/TemplateManager.java,
               **/monitor/api/MonitorData.java,
