XWIKI-5684: Some translations contain velocity code * none of them were used since a long time, still moved them to deprecated section

--- a/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
+++ b/xwiki-platform-core/xwiki-platform-oldcore/src/main/resources/ApplicationResources.properties
@@ -317,8 +317,6 @@ attributes=Attributes
 showattributes=Show page attributes
 rememberme=This is a private computer, please remember me
 dontrememberme=This is a public/shared computer, do not remember me
-editincludepagemsgone=$pages.size() included document
-editincludepagemsgmore=$pages.size() included documents
 youareeditingtranslation=You are editing the following translation
 youareeditingoriginal=You are editing the original document
 originallanguage=The original language of the document is
@@ -388,10 +386,7 @@ core.edit.wikiToolbar.htmltext=<!-- Your HTML code here -->
 core.edit.wikiToolbar.velocity=Velocity code
 core.edit.wikiToolbar.velocitytext=#* Your velocity code here *#
 
-simpleedittoolbardesc=Click on a button to get a sample text
-simpleedittoolbardesc2=Enter the text that you wish to format. It will be shown to be copy-pasted.\\nExample:\\n$1\\nwill become:\\n$2
 notice=Notice
-myhomepage=$xwiki.getDocument($context.user).display("first_name", "view", $xwiki.getDocument($context.user).getObject("XWiki.XWikiUsers", 0))'s profile
 changephoto=Changing photo for {0}
 avatar=User photo
 Error=Error
@@ -408,11 +403,6 @@ viewattachments=Attachments
 viewhistory=History
 viewinformation=Information
 reveditor=Editor
-viewcodetitle=Wiki code for <em>$doc.displayTitle</em>
-viewcommentstitle=Comments for <em>$doc.displayTitle</em>
-viewattachmentstitle=Attachments for <em>$doc.displayTitle</em>
-viewhistorytitle=History of <em>$doc.displayTitle</em>
-viewinformationtitle=Information about <em>$doc.displayTitle</em>
 adminprefs=Preferences
 adminglobalrights=Global Rights
 adminspacerights=Space Rights
@@ -486,8 +476,6 @@ nopagesatthemoment=There are no pages at the moment.
 Editing=Editing
 chooseassociatedtags=choose associated tags
 
-editgroupsredirect=You can currently edit groups using the wiki on <a href="$xwiki.getURL("XWiki.XWikiGroups")">the groups page</a>.
-editusersredirect=You can currently edit users using the wiki on <a href="$xwiki.getURL("XWiki.XWikiUsers")">the users page</a>.
 changespace=Change Space
 adminspaceprefs=Space Prefs
 editprefsforspace=Editing preferences for space
@@ -4821,6 +4809,22 @@ extensions.info.jobLog.installplan=Install plan log
 extensions.info.jobLog.uninstall=Uninstall log
 #@deprecated job.log.label.uninstallplan
 extensions.info.jobLog.uninstallplan=Uninstall plan log
+
+#######################################
+## until 6.3
+#######################################
+editincludepagemsgone=$pages.size() included document
+editincludepagemsgmore=$pages.size() included documents
+simpleedittoolbardesc=Click on a button to get a sample text
+simpleedittoolbardesc2=Enter the text that you wish to format. It will be shown to be copy-pasted.\\nExample:\\n$1\\nwill become:\\n$2
+myhomepage=$xwiki.getDocument($context.user).display("first_name", "view", $xwiki.getDocument($context.user).getObject("XWiki.XWikiUsers", 0))'s profile
+viewcodetitle=Wiki code for <em>$doc.displayTitle</em>
+viewcommentstitle=Comments for <em>$doc.displayTitle</em>
+viewattachmentstitle=Attachments for <em>$doc.displayTitle</em>
+viewhistorytitle=History of <em>$doc.displayTitle</em>
+viewinformationtitle=Information about <em>$doc.displayTitle</em>
+editgroupsredirect=You can currently edit groups using the wiki on <a href="$xwiki.getURL("XWiki.XWikiGroups")">the groups page</a>.
+editusersredirect=You can currently edit users using the wiki on <a href="$xwiki.getURL("XWiki.XWikiUsers")">the users page</a>.
 
 ## Used to indicate where deprecated keys end
 #@deprecatedend
