XWIKI-10440: Orphaned WebHome documents aren't displayed on neither XWiki.OrphanedPages nor Panels.OrphanedPages - Added new dependencies introduced by the fix.

--- a/xwiki-platform-core/xwiki-platform-panels/xwiki-platform-panels-ui/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-panels/xwiki-platform-panels-ui/pom.xml
@@ -96,5 +96,12 @@
       <type>xar</type>
       <scope>runtime</scope>
     </dependency>
+    <!-- Needed to get the homepage in Panels.OrphanedPages -->
+    <dependency>
+      <groupId>org.xwiki.platform</groupId>
+      <artifactId>xwiki-platform-wiki-script</artifactId>
+      <version>${project.version}</version>
+      <scope>runtime</scope>
+    </dependency>
   </dependencies>
 </project>
