XWIKI-11460: Allow filesystem skins to indicate a base skin

--- a/xwiki-platform-core/xwiki-platform-oldcore/pom.xml
+++ b/xwiki-platform-core/xwiki-platform-oldcore/pom.xml
@@ -137,6 +137,10 @@
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-compress</artifactId>
     </dependency>
+    <dependency>
+      <groupId>commons-configuration</groupId>
+      <artifactId>commons-configuration</artifactId>
+    </dependency>
 
     <!-- For extracting metadata from various document types -->
     <dependency>
@@ -729,6 +733,7 @@
               **/internal/model/reference/CurrentStringEntityReferenceResolver.java,
               **/internal/observation/remote/converter/AbstractXWikiEventConverter.java,
               **/internal/observation/remote/converter/ActionExecutionEventConverter.java,
+              **/internal/skin/*.java,
               **/internal/template/Template.java,
               **/internal/template/TemplateContent.java,
               **/internal/template/TemplateScriptService.java,
